package dat.backend.model.entities;

import java.util.List;

public class Calculator {

    List<Material> MaterialList;
    List<Material> BOM;



}
