@startuml
'https://plantuml.com/class-diagram

class User
class Customer
class Carport
class Material

Customer "1" o-- "many" User : has
Customer "1" *-- "many" Carport : has
Carport "1" *-- "many" Part : has
Part "1" *-- "many" Material : has

class User{
String username;
String password;
String role;
}

class Customer{
String customerName;
String address;
int postalCode;
String city;
int phoneNumber;
User user;
Customer(customerName, address, postalCode, city, phoneNumber)
'getters - for alle
'User user// constructor uden user
}

class Carport {
int length;
int width;
int height;
float materialFullPrice;
float feePrice;
List<Part> partList;
'getters - for alle
}

class Part{
Material material;
int partQuantity;
float partPrice;
setPartPrice(int partQuantity, float materialPrice)
'{quantity x mateterialPrice}
setPartQuantity()
'getters - for alle
}

class Material{
int materialQuantity;
String materialName;
String unitType;
float materialPrice;
'getters - for alle
}

class Calculator{
List<Material> MaterialList;
Part part;
Part woodCalculator(int length, int width, int height, List<Material> MaterialList)
}

@enduml